enhance: `examples`: add custom `*slog.Logger` to `examples`

--- a/docsrc/releases/v0.3.0.md
+++ b/docsrc/releases/v0.3.0.md
@@ -143,6 +143,21 @@ updated, _ := client.PhoneNumbers().Update(ctx, phoneID, &elevenlabs.UpdatePhone
 _ = client.PhoneNumbers().Delete(ctx, phoneID)
 ```
 
+## New Examples
+
+Four new runnable examples demonstrating the real-time services:
+
+| Example | Description |
+|---------|-------------|
+| `examples/websocket-tts/` | Real-time TTS streaming with LLM integration patterns |
+| `examples/websocket-stt/` | Live transcription with partial results and word timing |
+| `examples/speech-to-speech/` | Voice conversion with streaming and seed audio |
+| `examples/twilio/` | HTTP server for phone call handling |
+
+All examples use context-based structured logging with `slog` via `slogutil.ContextWithLogger()` for request-scoped logging.
+
+See [Examples](../examples.md) for usage instructions.
+
 ## New Dependencies
 
 - `github.com/gorilla/websocket v1.5.3` - WebSocket support
